Slightly modification to all src. Created unit tests for principal and ruby-acl

--- a/Src/Ruby-ACL/Rakefile
+++ b/Src/Ruby-ACL/Rakefile
@@ -40,6 +40,9 @@ Rake::RDocTask.new do |rdoc|
   rdoc.options << '--line-numbers'
 end
 
+#task :default => [:test_units]
+#
+#desc "Run basic tests"
 Rake::TestTask.new do |t|
   t.test_files = FileList['test/**/*.rb']
 end
