--- a/Src/Ruby-ACL/Rakefile
+++ b/Src/Ruby-ACL/Rakefile
@@ -1,13 +1,13 @@
-# 
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
- 
-
 require 'rubygems'
 require 'rake'
 require 'rake/clean'
-require 'rake/gempackagetask'
-require 'rake/rdoctask'
+
+require 'rake/gempackagetask' #initially 
+#require 'rubygems/package_task'      
+
+require 'rake/rdoctask'   #initialy 
+#require 'rdoc/task'
+
 require 'rake/testtask'
 
 spec = Gem::Specification.new do |s|
@@ -25,13 +25,15 @@ spec = Gem::Specification.new do |s|
   s.bindir = "bin"
 end
 
-Rake::GemPackageTask.new(spec) do |p|
+Rake::GemPackageTask.new(spec) do |p|    #initialy
+#Gems::PackageTask.new(spec) do |p|
   p.gem_spec = spec
   p.need_tar = true
   p.need_zip = true
 end
 
-Rake::RDocTask.new do |rdoc|
+Rake::RDocTask.new do |rdoc|   #initialy
+#Rdoc::Task.new do |rdoc|
   files =['README', 'LICENSE', 'lib/**/*.rb']
   rdoc.rdoc_files.add(files)
   rdoc.main = "README" # page to start on
